--- a/assets/font/iconfont.css
+++ b/assets/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2634289 */
-  src: url('iconfont.woff2?t=1626612950782') format('woff2'),
-       url('iconfont.woff?t=1626612950782') format('woff'),
-       url('iconfont.ttf?t=1626612950782') format('truetype');
+  src: url('iconfont.woff2?t=1627481656818') format('woff2'),
+       url('iconfont.woff?t=1627481656818') format('woff'),
+       url('iconfont.ttf?t=1627481656818') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-ico-:before {
+  content: "\e81c";
 }
 
 .icon-shanchu:before {
